--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -15,7 +15,11 @@
 <div class="landing-text">
 <h1>Experience Harvard's Favorite Slice.</h1>
 <h3>Award-winning sicilian-style pizza and subs</h3>
+{% if user.is_authenticated %}
 <a href="{% url 'order' 'Regular Pizza' %}" role="button" type="button" class="btn btn-outline-light" aria-pressed="true">Order Now</a>
+{% else %}
+<a href="{% url 'login' %}" role="button" type="button" class="btn btn-outline-light" aria-pressed="true">Order Now</a>
+{% endif %}
   </div>
   </div>
 
