updated remove from cart logic to include topping allowance update

--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -39,7 +39,7 @@
               <h4><b>Total: ${{Total|floatformat:2}}<b></h4>
           <a href="{% url 'submit' %}" class="btn btn-primary btn-block" role="button" id="submitOrder-btn">Submit Order</a>
             {% else %}
-            <h5 align="center">Your cart is currently empty!./h5>
+            <h5 align="center">Your cart is currently empty!</h5>
             {% endif %}
 
 
